# chat-monitor-package

./: .gitignore  ASSETS_STRUCTURE.md  QUICK_START.md  README-10远程调试app.md  README-11网络监控简化版.md  README-12常见py错误.md  README-13其他经验.md  README-14windows上打绿色包.md  README-14运行程序兼容性.md  README-15监控程序本身崩溃.md  README-16远程桌面的windows打包.md  README-17阿里云桌面的windows打包.md  README-2macApp运行中调试.md  README-3uI界面.md  README-4程序显示慢.md  README-5运行时断点调试.md  README-6播放声音.md  README-7瘦身.md  README-8DMG运行不一致排查.md  README-9外部配置.md  README-GUI统一构建.md  README-mac本地构建.md  README-发信人设置功能.md  README-发信人设置窗口排除.md  README.md  README_Windows.md  README_守护进程使用说明.md  README_自动重启总结.md  WINDOWS_SIMPLE_GUIDE.md  audio_alternative.py  audio_windows_compatible.py  auto_restart_monitor.py  build_macos_app.sh  build_macos_app_conservative.sh  build_macos_app_fixed.sh  build_macos_app_minimal.sh  build_macos_app_optimized.sh  build_macos_app_optimized_v2.sh  build_macos_app_with_icon.sh  build_windows_app.bat  (+74 more)
buildWin/: INDEX.md  README-14windows上打绿色包.md  README-2打包uv环境.md  README-3注意用dos不是powershell.md  README-macOS离线安装.md  README-使用本地Python.md  README-安装Python310.md  README-手动下载Python.md  README-离线安装指南.md  README-系统Python打包.md  README.md  build_aliyun_complete.bat  build_aliyun_simple.bat  build_conda_simple.bat  build_fixed_encoding.bat  build_github_style.bat  build_quick.bat  build_quick_mac.sh  build_simple.bat  build_windows10_compatible.bat  build_windows10_simple.bat  build_windows_app.bat  build_windows_bypass.bat  build_windows_compatible.bat  build_windows_compatible_fixed.bat  build_windows_conda.bat  (+77 more)
(+26 files in other folders)
