[project]
name = "chatmonitor"
version = "1.0.0"
description = "Chat Popup Monitor with YOLO detection and OCR"
authors = [
    {name = "ChatMonitor Team", email = "support@chatmonitor.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pytesseract>=0.3.10",
    "playsound>=1.2.2",
    "watchdog>=3.0.0",
    "pyinstaller>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 