[project]
name = "chat-monitor"
version = "0.1.0"
description = "Chat Monitor Application"
requires-python = ">=3.9,<3.14"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "watchdog>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

 